content/vault/v1.8.x/content/docs/enterprise/license/autoloading.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Vault and the Vault logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/web-unified-docs/blob/-/LICENSE

layout: docs
page_title: License Autoloading
description: An overview of license autoloading.
---

Prior to Vault 1.8, Vault Enterprise would be licensed using special binaries
that contained embedded licenses, or via a license written into Vault storage
using the [PUT sys/license API](/vault/docs/system/license#install-license).

As of Vault 1.8 those options still exist but are deprecated, and the recommended
mechanism for managing licenses is called License Autoloading.  New clusters are
required to use the autoloading method.

License Autoloading can be done using one of these mechanisms, in increasing order
of priority (i.e. `VAULT_LICENSE` takes precedence over `VAULT_LICENSE_PATH`, which
takes precedence over `license_path` in config.)
* [license_path in config](/vault/docs/configuration#license_path)
* [VAULT_LICENSE_PATH environment variable](/vault/docs/commands#vault_license_path)
* [VAULT_LICENSE environment variable](/vault/docs/commands#vault_license)

Nodes within a cluster should be consistently licensed. All nodes in a cluster
should use autoloading, or none should. If autoloading is used, all nodes should
use the same license string. Warnings will be written to the log when there
are discrepancies.

If autoloading is used, any existing stored license will be ignored.  The presence
of a stored license in conjunction with an autoloaded license will also result in
logged warnings.  Once a migration to autoloading is completed, it is recommended to use
the [DELETE API](/vault/docs/system/license#delete-license) to remove the stored license.
